k8s/tomcat-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tomcat-demo
  labels:
    app: tomcat-demo
