k8s/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tomcat-demo
  labels:
    app: tomcat-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-demo
  namespace: tomcat-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat-demo
  template:
    metadata:
      labels:
        app: tomcat-demo
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: tomcat-demo
        image: harbor.ng20.org/demos/tomcat-demo:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-demo
  namespace: tomcat-demo
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: tomcat-demo
