k8s/tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-demo
  namespace: tomcat-demo
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: tomcat-demo
