k8s/tomcat-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-demo-ing
  namespace: tomcat-demo
spec:
  rules:
  - host: tomcat-demo.ng20.org
    http:
      paths:
      - backend:
          serviceName: tomcat-demo-svc
          servicePort: 8080
        path: /
